--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.8",
     "webpack": "^3.10.0",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^2.9.1",
     "webpack-node-externals": "^1.7.2",
     "webpack-parallel-uglify-plugin": "^1.0.2"
